# technostrelka

./: .gitignore  README.md  docker-compose.dev.yaml  docker-compose.yaml  init.sql  init_utf8.sql  package-lock.json
backend/: README.md
backend/account/: .env  .gitignore  Dockerfile  pyproject.toml
backend/account/src/: base_dao.py  config.py  dependencies.py  main.py
backend/accounts/: .env  .env.example  Dockerfile  HELP.md  README.md  docker-compose.yml  pom.xml
backend/accounts/certificates/: private_key.pem  public_key.pem
backend/notification/: .env  pyproject.toml
backend/notification/src/: config.py  database.py  dependencies.py  main.py
backend/notification/src/alembic/: env.py
backend/notification/src/alembic/versions/: 2024_12_08_0141-929c3f4d230b_create.py
backend/notification/src/app/: __init__.py
backend/notification/src/app/notification/: dao.py  models.py  router.py  schemas.py  service.py
backend/notification/src/rabbitMq/: server.py
backend/notification/src/templates/: confirm.html  forgot.html  mail.html
backend/routes/: .env  Dockerfile  pyproject.toml
backend/routes/src/: config.py  dependencies.py  main.py
frontend/: .env  Dockerfile  README.md  middleware.js  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.jsx  page.jsx
frontend/app/admin/: page.jsx
frontend/app/lk/: layout.jsx  page.jsx
frontend/app/routesNear/: page.jsx
frontend/app/routesPaths/: page.jsx
frontend/store/: formCreateRoutes.js
frontend/utils/: auth.js
sh/: install-node.sh  order.txt  run-node.sh
(+121 files in other folders)
