[tool.poetry]
name = "notification"
version = "0.1.0"
description = ""
authors = ["ligets <legen2a208@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
alembic = "^1.13.3"
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.10.3"}
pydantic-settings = "^2.5.2"
python-dotenv = "^1.0.1"
datetime = "^5.5"
pyjwt = "^2.9.0"
aio-pika = "^9.4.3"
apscheduler = "^3.11.0"
fastapi-mail = "^1.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src"
]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope="session"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
